--- a/index.html
+++ b/index.html
@@ -90,12 +90,14 @@
             </div>
         </nav>
     <!-- Contenido introduccion --> 
+    <h1>pobando git</h1>
      	
     <div class="hero">
         <div class="container">
 	        <div class="row d-flex align-items-center">
 		        <div class="col-lg-6 hero-left">
 		            <h1 class="display-4 mb-5">Amamos comer Rico <br> Pero Saludable!</h1>
+                    
 
 		            <div class="mb-2">
 		    	        <a class="btn btn-primary btn-shadow btn-lg" href="menu.html" role="button">Explorar Menu</a>
