preparando archivos git

--- a/novedades.html
+++ b/novedades.html
@@ -169,7 +169,7 @@
                     
                 <div class="col-lg-6">
                     <div class="footer-widget pl-lg-5 pl-0">
-                        <h4 class= "footer__h4--margen">Comenzà a cambiar tus hàbitos</h4>
+                        <h4 class= "footer__h4--margen">Comenzá a cambiar tus hábitos</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                         <form id="newsletter">
                             <div class="form-group">
