--- a/index.html
+++ b/index.html
@@ -38,9 +38,18 @@
 	</div>	
 
      <!-- Menu Index -->
+    
     <div class="boxed-page">
 	    <nav id="navbar-header" class="navbar navbar-expand-lg">
             <div class="container">
+                
+                <a class="navbar-brand navbar-brand-center d-flex align-items-center p-0 only-mobile" href="/">
+                    <img src="img/logo.png" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="lnr lnr-menu"></span>
+                </button>
+
                 <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
                     <ul class="navbar-nav d-flex justify-content-between">
                         <li class="nav-item only-desktop">
@@ -163,12 +172,12 @@
                    <div class=" testi-content testi-carousel owl-carousel">
                         <div class="testi-item">
                             <i class="testi-icon fa fa-3x fa-quote-left"></i>
-                            <p class="testi-text">Con Wolf aprendí a comer saludable, sin dejar de darme los gustos. Me siento muy feliz con las metas que alcancé</p>
+                            <p class="testi-text">Con Wolf aprendí a comer saludable, sin dejar de darme los gustos. Me siento muy feliz.</p>
                             <p class="testi-author">Susana Gimenez</p>
                         </div>
                         <div class="testi-item">
                             <i class="testi-icon fa fa-3x fa-quote-left"></i>
-                            <p class="testi-text">Logré aprender que se puede tener un cuerpo sano sin sufrir. La educacion siempre es el camino</p>
+                            <p class="testi-text">Logré aprender que se puede tener un cuerpo sano sin sufrir. La educacion es el camino.</p>
                             <p class="testi-author">Gonzalo Bollati</p>
                         </div>
                     </div>
