--- a/recetas.html
+++ b/recetas.html
@@ -38,6 +38,13 @@
     <div class="boxed-page">
 	    <nav id="navbar-header" class="navbar navbar-expand-lg">
             <div class="container">
+                <a class="navbar-brand navbar-brand-center d-flex align-items-center p-0 only-mobile" href="/">
+                    <img src="img/logo.png" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="lnr lnr-menu"></span>
+                </button>
+
                 <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
                     <ul class="navbar-nav d-flex justify-content-between">
                         <li class="nav-item only-desktop">
