--- a/menu.html
+++ b/menu.html
@@ -123,7 +123,7 @@
                         <img src="img/desayuno11.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="h5--col1 card-title">Desayuno</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo dolores asperiores molestias, libero temporibus quos voluptatem tempora accusantium nemo, ratione ea illum ipsum provident, est quaerat officiis quas dolore aut.</p>
+                        <p class="card-text">Un desayuno tiene que tener Lacteos, frutas y cereales. En este día te proponemos: Omellete de huevo con avena y queso má mix de frutos rojos. Una bomba de proteinas y antioxidantes para tu cuerpo.</p>
                     </div>
                 </div>
             </div>
@@ -132,7 +132,7 @@
                     <img src="img/almuerzos.jpeg" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="h5--col2 card-title">Almuerzo</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis delectus exercitationem ab quibusdam consectetur earum quae dicta. Totam similique aspernatur ullam quos deleniti. Vero voluptatibus aperiam blanditiis distinctio, quod dolore?</p>
+                    <p class="card-text">Trabajas mucho? Entonces esta opcion es para vos, rápido, ríco y saludable. Ensalada con pollo, queso crema, verdes, cebolla y tomates. En tu almuerzo que no falten proteínas de alta calidad ya que es indispensable para comensar la segunda parte del día!</p>
                     </div>
                 </div>
                 </div>
@@ -142,7 +142,7 @@
                     <img src="img/meriedaa.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title h5--col3" >Merienda</h5>
-                    <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi repellat distinctio rem obcaecati consequatur doloribus. Maxime reprehenderit illum provident suscipit voluptates iste, laudantium ipsam, recusandae sequi dignissimos, nobis sit hic!</p>
+                    <p class="card-text">Muchos consideran que la merienda no es importante. Que gran disparate! Comer algo rico y saludable en la tarde, nos llena de energías para lo que resta del día. Aca una opción espectacular. Licuado de agua, frutos rojos y remolacha. Una bomba de vitaminas y minerales.</p>
                     </div>
                 </div>
         
@@ -152,7 +152,7 @@
                     <img src="img/cenaaa.jpeg" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title h5--col4">Cena</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt praesentium rem dolor dolorem fuga magnam harum sint saepe, ipsa consequatur? Architecto perspiciatis commodi optio expedita, sed pariatur voluptatum praesentium adipisci.</p>
+                    <p class="card-text">Para bajar de peso no hay que cenar. A quien se le ocurre semejante aberracion!! La cena, sibien tiene que ser ligera, tiene que estar!! Este caldito oriental con fideos de arroz, caldo de verduras caseras y zanahorias crujientes son todo lo que necesitas para finalizar como se debe tu día!</p>
                     </div>
                 </div>
                 </div>
@@ -167,7 +167,7 @@
                 <div class="col-lg-6 align-self-center">
                     <div class="footer-widget pr-lg-5 pr-0">
                         <h1 id="titulo">Wolf</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et obcaecati quisquam id sit omnis explicabo voluptate aut placeat, soluta, nisi ea magni facere, itaque incidunt modi? Magni, et voluptatum dolorem.</p>
+                        <p>Nuestro equipo interdisciplinario te espera para mostrarte el camino a un cuerpo sano. Consultá nuestras promociones para grupos así como también la posibilidad de prueba de un mes gratis!</p>
                         <nav class="nav nav-mastfoot justify-content-start">
                             <a class="nav-link" href="#">
                                 <i class="fab fa-facebook-f"></i>
@@ -185,7 +185,7 @@
                 <div class="col-lg-6">
                     <div class="footer-widget pl-lg-5 pl-0">
                         <h4 class= "footer__h4--margen">Comenzá a cambiar tus hábitos</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <p>No esperés más, suscribite a Wolf</p>
                         <form id="newsletter">
                             <div class="form-group">
                                 <input type="email" class="form-control" id="emailNewsletter" aria-describedby="emailNewsletter" placeholder="Enter email">
