--- a/reservation.html
+++ b/reservation.html
@@ -126,7 +126,7 @@
                                         <textarea class="form-control" id="message" name="message" rows="6" placeholder="Contanos tus expectativas de tratamiento"></textarea>
                                     </div>
                                     <div class="col-md-12 text-center">
-                                        <button class="btn btn-primary btn-shadow btn-lg" type="submit" name="submit">Send Message</button>
+                                        <button class="btn btn-primary btn-shadow btn-lg" type="submit" name="submit">Enviar Mensaje</button>
                                     </div>
                                 </div>
                             </form>
@@ -144,7 +144,7 @@
                 <div class="col-lg-6 align-self-center">
                     <div class="footer-widget pr-lg-5 pr-0">
                         <h1 id="titulo">Wolf</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et obcaecati quisquam id sit omnis explicabo voluptate aut placeat, soluta, nisi ea magni facere, itaque incidunt modi? Magni, et voluptatum dolorem.</p>
+                        <p>Nuestro equipo interdisciplinario te espera para mostrarte el camino a un cuerpo sano. Consultá nuestras promociones para grupos así como también la posibilidad de prueba de un mes gratis!</p>
                         <nav class="nav nav-mastfoot justify-content-start">
                             <a class="nav-link" href="#">
                                 <i class="fab fa-facebook-f"></i>
@@ -162,7 +162,7 @@
                 <div class="col-lg-6">
                     <div class="footer-widget pl-lg-5 pl-0">
                         <h4 class= "footer__h4--margen">Comenzá a cambiar tus hábitos</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <p>No esperés más, suscribite a Wolf</p>
                         <form id="newsletter">
                             <div class="form-group">
                                 <input type="email" class="form-control" id="emailNewsletter" aria-describedby="emailNewsletter" placeholder="Enter email">
