cambios favicon redes y enlaces

--- a/recetas.html
+++ b/recetas.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/css/tempusdominus-bootstrap-4.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/brands.css">
-
+    <link rel="iconn1" href="img/favvi.ico">
     <!-- Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Josefin+Sans:300,400,700">
     <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
@@ -170,12 +170,12 @@
                             <h3><span>Sorrentinos</span><br> Siempre acompañados de vegetales</h3>
                             <p class="pt-3">Pastas en una dieta? Si, pastas! APortan hidratos complejos y si las acompañamos con vegetales aumentamos el consumo de fibra pero lo más interesante, quien no ama las pastas con este frío?</p>
                                 <!-- boton receta Modal -->
-                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
+                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong1">
                                 Ver Receta
                             </button>
   
                             <!-- Modal -->
-                            <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby=ppp aria-hidden="true">
+                            <div class="modal fade" id="exampleModalLong1" tabindex="-1" role="dialog" aria-labelledby=ppp aria-hidden="true">
                             <div class="modal-dialog" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
@@ -218,12 +218,12 @@
                                 <h3><span>Sopa de Tomates</span><br> Guarnición:Verduras al vapor</h3>
                                 <p class="pt-3">En invierno tomamos muy poco lìquido, recetas como estas nos permiten optimizar nuestra hidratacióna travez de líquidos y minerales y vitaminas de los vegetales. Es rápida, fàcil y rica. Una receta tìpica para cuando te portaste un poco mal y tenes que hacer detox.</p>
                                <!-- boton receta Modal -->
-                                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
+                                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong2">
                                     Ver Receta
                                     </button>
          
                                <!-- Modal -->
-                                   <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+                                   <div class="modal fade" id="exampleModalLong2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
                                    <div class="modal-dialog" role="document">
                                    <div class="modal-content">
                                        <div class="modal-header">
@@ -279,13 +279,13 @@
                         <h1 id="titulo">Wolf</h1>
                         <p>Nuestro equipo interdisciplinario te espera para mostrarte el camino a un cuerpo sano. Consultá nuestras promociones para grupos así como también la posibilidad de prueba de un mes gratis!</p>
                         <nav class="nav nav-mastfoot justify-content-start">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="https://www.facebook.com/SentirseBienMendoza">
                                 <i class="fab fa-facebook-f"></i>
                             </a>
                             <a class="nav-link" href="#">
                                 <i class="fab fa-twitter"></i>
                             </a>
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="https://www.instagram.com/wolf.alimentacion.saludable/">
                                 <i class="fab fa-instagram"></i>
                             </a>
                         </nav>
