--- a/reservation.html
+++ b/reservation.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Suscripción</title>
-    <<meta name="description" content="Wolf Alimentacion saludable es un espacio para que puedas aprender habitos que aumentaran tu salud. Sin metodos estrictos, Wolf enseña que los pequeños cambios son fundamentales para una correcta mutricion ">
+    <meta name="description" content="Wolf Alimentacion saludable es un espacio para que puedas aprender habitos que aumentaran tu salud. Sin metodos estrictos, Wolf enseña que los pequeños cambios son fundamentales para una correcta mutricion ">
     <meta name=" keywords" content="nutricion, saludable, alimentacion, dieta, habitos, recetas, fitness, comida">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="https://cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/css/tempusdominus-bootstrap-4.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/brands.css">
-
+    <link rel="iconn1" href="img/favvi.ico">
     <!-- Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Josefin+Sans:300,400,700">
     <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
@@ -146,13 +146,13 @@
                         <h1 id="titulo">Wolf</h1>
                         <p>Nuestro equipo interdisciplinario te espera para mostrarte el camino a un cuerpo sano. Consultá nuestras promociones para grupos así como también la posibilidad de prueba de un mes gratis!</p>
                         <nav class="nav nav-mastfoot justify-content-start">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="https://www.facebook.com/SentirseBienMendoza">
                                 <i class="fab fa-facebook-f"></i>
                             </a>
                             <a class="nav-link" href="#">
                                 <i class="fab fa-twitter"></i>
                             </a>
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="https://www.instagram.com/wolf.alimentacion.saludable/">
                                 <i class="fab fa-instagram"></i>
                             </a>
                         </nav>
